name: campaigns
version: 0.0.0
cabal-version: >=1.8
build-type: Simple
license: BSD3

flag dev
    description:
        Turn on development settings, like auto-reload templates.
    default: False

flag library-only
    description:
        Build for use with "yesod devel"
    default: False

library

    if (flag(dev) || flag(library-only))
        cpp-options: -DDEVELOPMENT
        ghc-options: -Wall -fwarn-tabs -O0
    else
        ghc-options: -Wall -fwarn-tabs -O2
    exposed-modules:
        Application
        Foundation
        Import
        Import.NoFoundation
        Model
        Settings
        Settings.StaticFiles
        Internationalization.Types
        Internationalization.Form
        Handler.Common
        Handler.Language
        Handler.TermsAndConditions
        Handler.Widgets
        Handler.Signup
        Handler.ReferAFriend
        Handler.SignupForm
        Handler.ConfirmSignup
        Handler.Dashboard
        Handler.Job
        Handler.DataApi
        Job.Types
        Job.Dispatch
        Job.Activation
        Job.Welcome
        Job.StepAchieved
        Job.Tracking
    build-depends:
        base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5,
        yesod >=1.4.3 && <1.5,
        yesod-core >=1.4.17 && <1.5,
        yesod-auth >=1.4.0 && <1.5,
        yesod-static >=1.4.0.3 && <1.6,
        yesod-form >=1.4.0 && <1.5,
        classy-prelude >=0.10.2,
        classy-prelude-conduit >=0.10.2,
        classy-prelude-yesod >=0.10.2,
        bytestring >=0.9 && <0.11,
        text >=0.11 && <2.0,
        persistent >=2.0 && <2.7,
        persistent-postgresql >=2.1.1 && <2.7,
        persistent-template >=2.0 && <2.7,
        template-haskell -any,
        shakespeare >=2.0 && <2.1,
        hjsmin >=0.1 && <0.3,
        monad-control >=0.3 && <1.1,
        wai-extra >=3.0 && <3.1,
        yaml >=0.8 && <0.9,
        http-conduit >=2.1 && <2.3,
        directory >=1.1 && <1.3,
        warp >=3.0 && <3.3,
        data-default -any,
        aeson >=0.6 && <1.1,
        conduit >=1.0 && <2.0,
        monad-logger >=0.3 && <0.4,
        fast-logger >=2.2 && <2.5,
        wai-logger >=2.2 && <2.4,
        file-embed -any,
        safe -any,
        unordered-containers -any,
        containers -any,
        vector -any,
        time -any,
        case-insensitive -any,
        wai -any,
        path-pieces -any,
        random -any,
        HTTP -any,
        http-conduit -any,
        cryptonite -any,
        uuid,
        esqueleto,
        foreign-store
    extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                NoImplicitPrelude MultiParamTypeClasses TypeFamilies GADTs
                GeneralizedNewtypeDeriving FlexibleContexts FlexibleInstances
                EmptyDataDecls NoMonomorphismRestriction DeriveDataTypeable
                ViewPatterns TupleSections RecordWildCards
    hs-source-dirs: . app

executable campaigns

    if flag(library-only)
        buildable: False
    main-is: main.hs
    build-depends:
        base -any,
        campaigns -any
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
